Fixes #98: port DCS launch scripts from l4g